--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,8 +4,8 @@
 
 author:
   name: atisz7
-  image: author.png
-  greeting: "Your new Qubt site :tada:"
+  image: vector_guy.png
+  greeting: "DevOps | SRE | Observability Engineer"
   icon: ":wave:"
 
 ############################
